# metal_cpp_compute

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt  saxpby.cpp  saxpby_with_wrapper.cpp  vertex_relaxation.cpp
examples/common/: binary_io.hpp  math.hpp  timer.hpp
metal-cmake/: CMakeLists.txt
metal-cmake/include/metal/: wrapper.hpp
metal-cmake/src/: compute_definition.cpp  wrapper.cpp
